--- a/webapp/pubspec.yaml
+++ b/webapp/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^2.5.4
   file_selector: ^1.1.0
   super_clipboard: ^0.9.1
+  freezed: ^3.2.5
+  build_runner: ^2.11.1
 
 flutter:
   uses-material-design: true
